<resources>
    <string name="app_name">BOOK STORE</string>
    <!-- Login -->
    <string name="title_login">Hello,</string>
    <string name="subtitle_login">Welcome Back! Please enter your details.</string>
    <string name="show_password">Show Password</string>
    <string name="login">Sign In</string>
    <string name="ask_login">Don\'t have an account?</string>
    <!-- Login & Register -->
    <string name="email">Email</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="email_placeholder">Enter Email</string>
    <string name="email_invalid">Invalid Email</string>
    <string name="password">Password</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="password_length">Password at least 8 characters</string>
    <string name="password_placeholder">Enter Password</string>
    <string name="login_success">Login Success!</string>
    <!-- Register -->
    <string name="title_register">Sign up</string>
    <string name="subtitle_register">Let\'s register your account.</string>
    <string name="consent">Accept terms &amp; Condition </string>
    <string name="register">Sign Up</string>
    <string name="name">Name</string>
    <string name="name_placeholder">Enter Name</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="name_length">Name at least 4 characters</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_invalid">Password not match</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="create_password">Create a password</string>
    <string name="ask_register">Already have an account?</string>
    <string name="register_success">Register Success!</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">Login</string>
    <string name="username">Username</string>
    <string name="username_placeholder">Enter Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>
    <string name="book_best_seller">Book Best Seller</string>
    <string name="your_order_list_book">Your Order List Book</string>
    <string name="post_email">Post Email</string>
    <string name="logout">Logout</string>
    <string name="example_gmail_com">Example@gmail.com</string>
    <string name="user">User</string>
    <string name="update_user">Update User</string>
    <string name="gmail">Example@gmail.com</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Password</string>
    <string name="ex_password">password</string>
    <string name="book_desciption">book description</string>
    <string name="name_author">name author</string>
    <string name="title">Title :</string>
    <string name="buy">Buy</string>
    <string name="OrderBook">Order Book</string>
    <string name="location">Location</string>
    <string name="cancel">Cancel</string>
    <string name="layout">layout</string>
    <string name="Tiket">tiket</string>
    <string name="phone">Phone</string>

</resources>