<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.ProfileFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSecondary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E3EDFC"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:src="@drawable/profile"
                android:contentDescription="@string/profile" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Wilson"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/email_icon"
                    android:layout_marginStart="10dp"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/email"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/email" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_gmail_com"
                    android:textSize="16sp"
                    android:textColor="#000000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/location_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/location"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/email" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="16sp"
                    android:textColor="#000000"/>
            </LinearLayout>


            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ex_password"
                android:textSize="16sp"
                android:textColor="#000000"
                android:visibility="gone"/>

            <Button
                android:id="@+id/edit_button"
                android:layout_width="70dp"
                android:layout_height="34dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/blue"
                android:text="Edit"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="88dp"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/red"
                android:text="Delete"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/logout_button"
                android:layout_width="88dp"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/blue"
                android:text="Logout"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
