<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OrderBook"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:elevation="10dp"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/card">

                    <ImageView
                        android:id="@+id/img_list"
                        android:layout_width="0dp"
                        android:layout_height="178dp"
                        android:layout_weight="0.5"
                        android:padding="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_background" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/label_author"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Author :"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_author"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name_author"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/label_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/label_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="Price"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="-0.4dp"
                android:layout_marginStart="2dp"
                android:background="@drawable/card"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_synopsis_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Synopsis :"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_synopsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_desciption"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:layout_marginStart="2dp"
                android:background="@drawable/card"
                android:padding="10dp">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/username"
                    android:inputType="text"
                    tools:ignore="LabelFor,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Phone"
                    android:inputType="text"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Address"
                    android:inputType="text"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Date"
                    android:inputType="date"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/buy_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_button"
                    android:text="Order"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
